[project]
name = "my-python-tools"
version = "0.1.0"
description = "Miscellaneous Python tools used locally"
authors = [
    {name = "CoeJoder",email = "CoeJoder@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ics (>=0.7.2,<0.8.0)",
    "icalendar (>=6.3.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

